<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/largeMargin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/alarm_icon" />

            <EditText
                android:id="@+id/edt_alarm_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/largeMargin"
                android:drawablePadding="@dimen/xSmallMargin"
                android:hint="@string/alarm_name"
                android:inputType="text"
                android:maxLines="1" />

            <Button
                android:id="@+id/btn_ringtone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:text="@string/ringtone" />

            <Button
                android:id="@+id/btn_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:text="@string/location" />

            <CheckBox
                android:id="@+id/checkbox_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:text="@string/vibration" />


            <Button
                android:id="@+id/btn_add_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/largeMargin"
                android:text="@string/add_alarm" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />


    </RelativeLayout>


</ScrollView>